# Pydescope

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
pydescope/: analyser.py  cli.py  graph_builder.py  parser.py  renderer.py  utils.py
